--- a/laravel-angular-front/package.json
+++ b/laravel-angular-front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.1",
+    "ng-snotify": "^4.3.1",
     "rxjs": "~6.4.0",
     "serialize-javascript": "^2.1.2",
     "tslib": "^1.10.0",
